<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddBusinessCardActivity">

    <TextView
        android:id="@+id/tv_titulo_adicionar_cartao"
        style="@style/textView_Title"
        android:text="@string/add_card"
        tools:layout_editor_absoluteX="247dp"
        tools:layout_editor_absoluteY="187dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/btn_close_add_card"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/actionBarItemBackground"
        android:src="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:hint="@string/hint_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_adicionar_cartao">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_nome"
            style="@style/textInputEdit_AddCard"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_telefone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:hint="@string/hint_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_nome">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_telefone"
            style="@style/textInputEdit_AddCard"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:hint="@string/hint_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_telefone">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_mail"
            style="@style/textInputEdit_AddCard"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_company_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:hint="@string/hint_company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_mail">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_nome_empresa"
            style="@style/textInputEdit_AddCard"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:hint="@string/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_company_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_color"
            android:focusableInTouchMode="false"
            style="@style/textInputEdit_AddCard"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Confirmar"
        app:layout_constraintTop_toBottomOf="@id/til_color"
        app:layout_constraintStart_toStartOf="parent"/>

    //Minha implementação abaixo
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_colors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp"
        android:background="@color/white"
        tools:listitem="@layout/item_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />
    <TextView
        android:id="@+id/tv_select_color_title"
        style="@style/textView_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textAlignment="center"
        android:text="@string/tv_select_color"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="tv_select_color_title,recycler_view_colors" />

</androidx.constraintlayout.widget.ConstraintLayout>